--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,8 @@
   background-color: #f6f7f8;
   min-height: 100vh;
   color: #363A44;
+  display: flex;
+  flex-direction: column;
 }
 .guideTab {
   &-item {
@@ -32,7 +34,7 @@
     }
     &-right {
       flex-shrink: 0;
-      color: #e8e9ec;
+      color: #B3B5B9;
     }
   }
 }
@@ -69,4 +71,14 @@
     font-size: 16px;
     color: #363A44;
   }
+}
+.footer {
+  margin-top: auto;
+  text-align: center;
+  color: #B3B5B9;
+  font-size: 12px;
+  padding: 10px 0;
+  line-height: 1.5;
+  a {
+    color: #428FFC;}
 }
